Fix FindBugs warning (Julian, Sarah)